[package]
name = "def-mod"
version = "0.4.0"
authors = ["Jezza <jezzadabomb@gmail.com>"]
edition = "2018"
description = "Simplifies module implementation routing and statically verifies exports."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Jezza/def_mod"
keywords = ["def-mod", "module", "cross-platform", "static", "compile-time"]

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = { version = "0.4", features = ["nightly"] }
syn = { version = "0.14", features = ["full", "extra-traits", "parsing"] }
